deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teamhex
  labels:
    app: teamhex
    type: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: teamhex
      type: backend
  template:
    metadata:
      labels:
        app: teamhex
        type: backend
    spec:
      imagePullSecrets:
        - name: github
      containers:
        - name: teamhex
          image: ghcr.io/weters/teamhex/server:latest
          readinessProbe:
            httpGet:
              port: 5000
              path: /
          livenessProbe:
            httpGet:
              port: 5000
              path: /
