deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teamhex
  labels:
    app: teamhex
    type: backend
spec:
  selector:
    app: teamhex
    type: backend
  ports:
    - port: 5000
