deployments/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: teamhex
  labels:
    app: teamhex
    type: backend
spec:
  tls:
    - hosts:
        - api.teamhex.dev
      secretName: tls-teamhex
  rules:
    - host: api.teamhex.dev
      http:
        paths:
          - backend:
              serviceName: teamhex
              servicePort: 5000
